<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scroll_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_large">

            <ImageView
                android:id="@+id/iv_qr"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="@+id/scroll_cl"
                app:layout_constraintStart_toStartOf="@+id/scroll_cl"
                app:layout_constraintTop_toTopOf="@+id/scroll_cl"
                app:srcCompat="@drawable/ic_qrapptoxin" />

            <EditText
                android:id="@+id/et_ssid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="@color/limedspruce"
                android:drawableStart="@drawable/ic_wifi"
                android:drawablePadding="@dimen/padding_small"
                android:hint="@string/string_et_ssid"
                android:inputType="textNoSuggestions|textVisiblePassword"
                android:singleLine="true"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/scroll_cl"
                app:layout_constraintStart_toStartOf="@+id/et_password"
                app:layout_constraintTop_toBottomOf="@+id/iv_qr" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="@color/limedspruce"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="@dimen/padding_small"
                android:hint="@string/string_et_password"
                android:inputType="textNoSuggestions|textVisiblePassword"
                android:singleLine="true"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/iv_qr"
                app:layout_constraintStart_toStartOf="@+id/iv_qr"
                app:layout_constraintTop_toBottomOf="@+id/et_ssid" />

            <Button
                android:id="@+id/btn_pdf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/general_button"
                android:text="@string/string_button_createpdf"
                android:textColor="@drawable/general_button"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btn_generate"
                app:layout_constraintStart_toStartOf="@+id/btn_generate"
                app:layout_constraintTop_toBottomOf="@id/btn_generate" />

            <Button
                android:id="@+id/btn_generate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/general_button"
                android:text="@string/string_button_createqr"
                android:textColor="@drawable/general_button"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/et_password"
                app:layout_constraintStart_toStartOf="@+id/et_password"
                app:layout_constraintTop_toBottomOf="@+id/sw_network_type" />

            <Switch
                android:id="@+id/sw_network_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:theme="@style/SwitchTheme"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/et_password"
                app:layout_constraintStart_toStartOf="@+id/et_password"
                app:layout_constraintTop_toBottomOf="@+id/tv_select_type" />

            <TextView
                android:id="@+id/tv_wpa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="WPA"
                android:textColor="@color/alto"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/sw_network_type"
                app:layout_constraintEnd_toStartOf="@+id/sw_network_type"
                app:layout_constraintTop_toTopOf="@+id/sw_network_type" />

            <TextView
                android:id="@+id/tv_wep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="WEP"
                android:textColor="@color/alto"
                android:textStyle="normal"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/sw_network_type"
                app:layout_constraintStart_toEndOf="@+id/sw_network_type"
                app:layout_constraintTop_toTopOf="@+id/sw_network_type" />

            <TextView
                android:id="@+id/tv_select_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/string_select_your_networktype"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/sw_network_type"
                app:layout_constraintStart_toStartOf="@+id/sw_network_type"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>